force-app/main/default/objects/pse__Proj__c/fields/Confidential_Area__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Area__c</fullName>
    <description>Confidential Area</description>
    <label>Confidential Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CP_Sharing</valueSetName>
    </valueSet>
</CustomField>