force-app/main/default/objects/pse__Proj__c/fields/CT_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>CT_Acquisition__c</fullName>
    <description>.</description>
    <label>Acquisition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>