force-app/main/default/objects/pse__Proj__c/fields/CT_Recognisable_Value__c.field-meta.xml
<CustomField>
    <fullName>CT_Recognisable_Value__c</fullName>
    <formula>IF(ISPICKVAL(pse__Practice__r.CT_Project_or_Milestone_Recognition__c, &quot;Milestone&quot;) &amp;&amp; TEXT(pse__Stage__c) &lt;&gt; &quot;Completed&quot;, CT_Manual_Recovery_Rate__c * CP_Total_Costs__c,
IF( CP_Complete__c &gt; 1,1 * CT_Fee_Amount__c,CP_Complete__c * CT_Fee_Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recognisable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>