force-app/main/default/objects/pse__Proj__c/fields/CT_Senior_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>CT_Senior_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>