force-app/main/default/objects/pse__Proj__c/fields/CT_Senior_Reviewer_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>CT_Senior_Reviewer_is_Current_User__c</fullName>
    <formula>CT_Senior_Reviewer__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Senior Reviewer is Current User</label>
    <type>Checkbox</type>
</CustomField>