force-app/main/default/objects/pse__Proj__c/fields/CT_Team_1__c.field-meta.xml
<CustomField>
    <fullName>CT_Team_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>