force-app/main/default/objects/pse__Proj__c/fields/CT_Team_1_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>CT_Team_1_is_Current_User__c</fullName>
    <formula>CT_Team_1__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team 1 is Current User</label>
    <type>Checkbox</type>
</CustomField>