force-app/main/default/objects/pse__Proj__c/fields/CT_Team_2__c.field-meta.xml
<CustomField>
    <fullName>CT_Team_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>