force-app/main/default/objects/pse__Proj__c/fields/Estimated_Costs__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Costs__c</fullName>
    <description>CT_Fee_Amount__c / CT_Manual_Recovery_Rate__c</description>
    <formula>CT_Fee_Amount__c / CT_Manual_Recovery_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>