force-app/main/default/objects/pse__Proj__c/fields/Opportunity_Confidential_Area__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Confidential_Area__c</fullName>
    <label>Opportunity Confidential Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CP_Sharing</valueSetName>
    </valueSet>
</CustomField>