force-app/main/default/objects/pse__Proj__c/fields/Remove_Acquisition_Marker__c.field-meta.xml
<CustomField>
    <fullName>Remove_Acquisition_Marker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Acquisition Marker</label>
    <type>Checkbox</type>
</CustomField>