force-app/main/default/objects/pse__Proj__c/listViews/My_project_65_recovery.listView-meta.xml
<ListView>
    <fullName>My_project_65_recovery</fullName>
    <columns>pse__Account__c</columns>
    <columns>NAME</columns>
    <columns>pse__Status_Visual__c</columns>
    <columns>pse__Schedule_Visual__c</columns>
    <columns>pse__Financial_Visual__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>psaws__Project_Manager_Is_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Project_Status__c</field>
        <operation>equals</operation>
        <value>Red</value>
    </filters>
    <filters>
        <field>CT_Actual_Recovery_Rate__c</field>
        <operation>lessOrEqual</operation>
        <value>65.00</value>
    </filters>
    <filters>
        <field>pse__Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CT_Actual_Recovery_Rate__c</field>
        <operation>notEqual</operation>
        <value>0.0</value>
    </filters>
    <label>My projects &lt; 65% recovery</label>
</ListView>