force-app/main/default/objects/pse__Proj__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>pse__Project_Manager__c</columns>
    <columns>NAME</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Account__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Is_Billable__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Project_Status__c</columns>
    <columns>pse__Is_Active__c</columns>
    <columns>pse__Unscheduled_Backlog__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>pse__Billed__c</columns>
    <columns>CT_Year_End_Date__c</columns>
    <columns>CT_Project_Partner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>